// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-position match input "START
hello
END" with regexp "/START\\n(hello)\\nEND/g" 1`] = `
Array [
  Object {
    "endPos": 5,
    "lineNumber": 2,
    "startPos": 0,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo
START
hello
END" with regexp "/START\\n(hello)\\nEND/g" 1`] = `
Array [
  Object {
    "endPos": 5,
    "lineNumber": 3,
    "startPos": 0,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo
START
hello
END" with regexp "/START\\n(hello)\\nEND/g" 2`] = `
Array [
  Object {
    "endPos": 5,
    "lineNumber": 3,
    "startPos": 0,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo
hello "hello" bar" with regexp "/(["']hello["'])/g" 1`] = `
Array [
  Object {
    "endPos": 13,
    "lineNumber": 2,
    "startPos": 6,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo
hello bar" with regexp "/(hello)/g" 1`] = `
Array [
  Object {
    "endPos": 5,
    "lineNumber": 2,
    "startPos": 0,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo hello "hello" bar" with regexp "/(["']hello["'])/g" 1`] = `
Array [
  Object {
    "endPos": 17,
    "lineNumber": 1,
    "startPos": 10,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo hello "hello"" with regexp "/(["']hello["'])/g" 1`] = `
Array [
  Object {
    "endPos": 17,
    "lineNumber": 1,
    "startPos": 10,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo hello bar" with regexp "/(hello)/g" 1`] = `
Array [
  Object {
    "endPos": 9,
    "lineNumber": 1,
    "startPos": 4,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "foo hello" with regexp "/(hello)/g" 1`] = `
Array [
  Object {
    "endPos": 9,
    "lineNumber": 1,
    "startPos": 4,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "hello "hello"" with regexp "/(["']hello["'])/g" 1`] = `
Array [
  Object {
    "endPos": 13,
    "lineNumber": 1,
    "startPos": 6,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "hello 'hello'" with regexp "/(["']hello["'])/g" 1`] = `
Array [
  Object {
    "endPos": 13,
    "lineNumber": 1,
    "startPos": 6,
    "values": Array [
      "hello",
    ],
  },
]
`;

exports[`get-position match input "hello" with regexp "/(hello)/g" 1`] = `
Array [
  Object {
    "endPos": 5,
    "lineNumber": 1,
    "startPos": 0,
    "values": Array [
      "hello",
    ],
  },
]
`;
